--- a/components/family/FamilyActivity/styles.scss
+++ b/components/family/FamilyActivity/styles.scss
@@ -1,19 +1,25 @@
-.family-activity {
+.family-card {
+  transition: all 0.3s;
 
-  a:hover img{
-    opacity: 0.8;
+  &:hover {
+    transform: scale(1.01);
+  }
+
+  .image {
+    margin-bottom: 1rem;
   }
 
 
-  &.box{
-    opacity: 0;
-    animation:fadeIn ease-in 1;
-    animation-fill-mode:forwards;
-    animation-duration:0.7s;
-  }
-  @keyframes fadeIn {
-    from { opacity:0; } to { opacity:1; }
+  .is-9 {
+    border-left: 1px solid lightgrey;
+    margin: 1rem;
+
+    .description {
+      .content {
+        margin-top: 1rem;
+      }
+    }
+
   }
 
 }
-
