Fix missign url & image

--- a/components/family/FamilyActivity/styles.scss
+++ b/components/family/FamilyActivity/styles.scss
@@ -9,10 +9,12 @@
     margin-bottom: 1rem;
   }
 
+  .is-12 {
+    margin: 1rem;
+  }
 
   .is-9 {
     border-left: 1px solid lightgrey;
-    margin: 1rem;
 
     .description {
       .content {
