--- a/components/family/FamilyActivity/styles.scss
+++ b/components/family/FamilyActivity/styles.scss
@@ -25,3 +25,11 @@
   }
 
 }
+
+.sectionTarget {
+  display: block;
+  content: "";
+  margin-top: -100px;
+  height: 100px;
+  visibility: hidden;
+}
